# ohtu_palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics-1/src/: player_reader.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistitc_service_test.py
viikko2/: haara1.txt  haara2.txt  important_document.txt  pyproject.toml  remotebranch.txt
viikko2/nhl-reader/: pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py
viikko2/project-reader/src/: index.py  project.py  project_reader.py
viikko3/login-robot/src/repositories/: user_repository.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: register.robot  resource.robot
viikko4/: changes.txt  retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/: ostoskori.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  querrybuilder.py
viikko7/kivi-paperi-sakset/src/: index.py  kps_parempi_tekoaly.py  kps_peli_base.py  kps_tekoaly.py  peli_rakentaja.py
