[tool.poetry]
name = "poetry-web"
version = "0.0.1"
description = "Tehtävää 2 viikko \u001b[D\u001b[D\u001b[D"
authors = ["Visa Blad <visa.blad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
